Inicialização do banco de dados e Ajuste no controller de Locatario

--- a/Alugueis_API/appsettings.json
+++ b/Alugueis_API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDbConnectionString": "server=localhost; database=Imobilith; User=usrteste; Password=123@Mudar;TrustServerCertificate=True;"
+  }
 }
