Feat: finalizado cadastro de despesas.

--- a/Alugueis_API/appsettings.json
+++ b/Alugueis_API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDbConnectionString": "server=DESKTOP-E6G7IRT\\SQLEXPRESS; database=Imobilith; User=destroier008; Password=040405nfv;TrustServerCertificate=True;"
+    "AppDbConnectionString": "server=localhost; database=Imobilith; User=usrteste; Password=123@Mudar;TrustServerCertificate=True;"
   }
 }
